// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popover can specify position as object value 1`] = `
<PopoverBase
  animateFill={false}
  appendTo={[Function]}
  content={
    <GenerateId
      prefix="pf-random-id-"
    >
      [Function]
    </GenerateId>
  }
  distance={25}
  flip={true}
  hideOnClick={false}
  interactive={true}
  interactiveBorder={0}
  isVisible={true}
  lazy={true}
  maxWidth="calc(1.5rem + 18.75rem)"
  onCreate={[Function]}
  onHidden={[Function]}
  onHide={[Function]}
  onMount={[Function]}
  onShow={[Function]}
  onShown={[Function]}
  performance={true}
  placement="right"
  popperOptions={
    Object {
      "modifiers": Object {
        "hide": Object {
          "enabled": true,
        },
        "preventOverflow": Object {
          "enabled": true,
        },
      },
    }
  }
  theme="pf-tippy"
  trigger="manual"
  zIndex={9999}
>
  <div>
    Toggle Popover
  </div>
</PopoverBase>
`;

exports[`popover renders close-button, header and body 1`] = `
<PopoverBase
  animateFill={false}
  appendTo={[Function]}
  content={
    <GenerateId
      prefix="pf-random-id-"
    >
      [Function]
    </GenerateId>
  }
  distance={25}
  flip={true}
  hideOnClick={false}
  interactive={true}
  interactiveBorder={0}
  isVisible={true}
  lazy={true}
  maxWidth="calc(1.5rem + 18.75rem)"
  onCreate={[Function]}
  onHidden={[Function]}
  onHide={[Function]}
  onMount={[Function]}
  onShow={[Function]}
  onShown={[Function]}
  performance={true}
  placement="top"
  popperOptions={
    Object {
      "modifiers": Object {
        "hide": Object {
          "enabled": true,
        },
        "preventOverflow": Object {
          "enabled": true,
        },
      },
    }
  }
  theme="pf-tippy"
  trigger="manual"
  zIndex={9999}
>
  <div>
    Toggle Popover
  </div>
</PopoverBase>
`;
